Agregar endpoint en SerieController para buscar series que comiencen por un numero
